<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="true">Farmacias</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="places_api_key" translatable="false">AIzaSyAtMzGuIRjDOrLl1j1bF3DgLHRFgK5ubps</string>
    <string name="maps_api_key" translatable="false">AIzaSyAtMzGuIRjDOrLl1j1bF3DgLHRFgK5ubps</string>
    <string name="places_server_api_key" translatable="false">AIzaSyAtMzGuIRjDOrLl1j1bF3DgLHRFgK5ubps</string>
    <string name="places_browser_api_key" translatable="false">AIzaSyAs3wpH3kKTdR5FKMBsTjaOERTlscCH_KM</string>

    <string name="content_authority" translatable="false">com.chernandezgil.farmacias</string>
    <!-- MapTabFragment-->
    <string name="format_distance"><xliff:g id="distance">%1$1.2f</xliff:g> Km</string>
    <string name="mtf_tu_ubicacion" translatable="true">Tu ubicación</string>
    <string name="mtf_radio_busqueda_insuficiente" translatable="true">Sin resultados. Radio de busqueda insuficiente</string>
    <string name="mtf_fuera_de_extremadura" translatable="true">Fuera de Extremadura</string>
    <string name="mtf_openinghour_open" translatable="true">abierta</string>
    <string name="mtf_openinghour_close" translatable="true">cerrada</string>
    <string name="horario">Horario</string>
    <!-- MainActivityPresenter-->
    <string name="address_not_found" translatable="true">Ubicacion desconocida</string>
    <string name="settings_title" translatable="true">Settings</string>
    <string name="pref_title_first_section" translatable="true">App</string>
    <string name="pref_title_second_section" translatable="true">Otras</string>
    <string name="seek_bar_key" translatable="false">seekbar_key</string>
    <string name="seek_bar_title" translatable="true">Radio de busqueda</string>
    <!-- Preferences -->
    <string name="pref_rate_key" translatable="false">rate</string>
    <string name="rate_app" translatable="true">Si te gusta la app, por favor evaluala en Play Store</string>
    <string name="rate_app_title" translatable="true">Evalua la app</string>
    <string name="pref_email_key" translatable="false">email</string>
    <string name="email_title">Manda un email al desarrollador</string>

    <string name="pref_share_app_key" translatable="false">share app</string>
    <string name="share_app_string">Recomienda a un amigo nuestra aplicacion</string>
    <string name="share_app_title">Comparte esta app con amigos</string>

    <string name="pref_version_key" translatable="false">version</string>
    <string name="version_title">Version</string>

    <string name="mailto" translatable="false">farmaciasdeextremadura@gmail.com</string>
    <string name="subject" translatable="true">Comentario sobre la aplicacion Farmacias de Extremadura</string>
    <string name="sendchooser_text" translatable="true">Enviar email...</string>

    <string name="app_play_store_address" translatable="false">https://play.google.com/store/apps/details?id=com.chernandezgil.farmacias</string>

    <string name="pref_delete_history_key" translatable="false">delete</string>
    <string name="pref_delete_history_title" translatable="true">Borrar historial de busqueda</string>
    <string name="pref_delete_history_summary" translatable="true">Al hacer click borraras el historial de busquedas realizadas hasta ahora</string>
    <string name="pref_delete_toast_message" translatable="true">Historial borrado</string>

    <!-- ListTabFragment -->
    <string name="ltf_removed_from_favorite" translatable="true">Farmacia eliminada de favoritos</string>
    <string name="ltf_added_to_favorite" translatable="true">Farmacia añadida a favoritos</string>

    <!-- TabLayoutFragment -->
    <string name="tlf_tab_list_string" translatable="true">Lista</string>
    <string name="tlf_tab_map_string" translatable="true">Mapa</string>
    <!-- FindRecyclerViewAdapter -->
    <!--<string name="fca_format_telefono" translatable="true"><xliff:g id="telefono">Teléfono: %1$1s</xliff:g></string>-->
    <!--<string name="fca_format_direccion" translatable="true"><xliff:g id="direccion">Dirección: %1$1s</xliff:g></string>-->
    <!--<string name="fca_format_localidad" translatable="true">Localidad: </string>-->
    <!--<string name="format_distancia" translatable="true"><xliff:g id="distancia">Distancia: %1$1.2f</xliff:g> Km</string>-->

    <string name="fca_telefono" translatable="true">Teléfono:</string>
    <string name="fca_direccion" translatable="true">Dirección:</string>
    <string name="fca_localidad" translatable="true">Localidad:</string>
    <string name="format_distancia" translatable="true"><xliff:g id="distancia">Distancia: %1$1.2f</xliff:g> Km</string>
    <string name="fca_distancia" translatable="true">Distancia:</string>

    <!-- Searchable configuration -->
    <string name="sc_search_hint" translatable="true">Buscar...</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- navigation_drawer_menu.xml-->
    <string name="nd_localizador" translatable="true">Cerca</string>
    <string name="nd_buscar" translatable="true">Buscar farmacia</string>
    <string name="nd_favorites" translatable="true">Favoritos</string>
    <string name="nd_settings" translatable="true">Ajustes</string>
    <string name="nd_ayuda" translatable="true">Ayuda</string>
    <string name="nd_feedback" translatable="true">Feedback</string>
    <string name="nd_otras" translatable="true">Otras</string>

    <!-- layout_toolbar_find.xml -->
    <string name="ltf_hint_search">Buscar farmacia</string>

    <!-- empty_results -->
    <string name="er_no_favorites" translatable="true">No tienes ninguna farmacia en favoritos</string>
    <string name="er_no_find" translatable="true">Búsqueda sin resultados</string>
    <string name="er_no_around" translatable="true">No hay farmacias a tu alrededor</string>

    <!-- empty_results -->
    <string name="ma_app_title_alrededor" translatable="true">Farmacias alrededor</string>
    <string name="ma_app_title_buscar" translatable="true">Buscar farmacia</string>
    <string name="ma_app_title_favoritos" translatable="true">Favoritos</string>
    <string name="ma_app_title_default" translatable="true">Farmacias</string>

    <!-- dialog_schedule_normal_normal.xml -->
    <string name="sn_lunes" translatable="true">Lunes:</string>
    <string name="sn_martes" translatable="true">Martes:</string>
    <string name="sn_miercoles" translatable="true">Miercoles:</string>
    <string name="sn_jueves" translatable="true">Jueves:</string>
    <string name="sn_viernes" translatable="true">Viernes:</string>
    <string name="sn_sabado" translatable="true">Sábado:</string>
    <string name="sn_domingo" translatable="true">Domingo:</string>

    <string name="sn_normal_hour" translatable="false">09:00-14:00,16:30-20:30</string>
    <string name="sn_sabado_hour" translatable="false">09:00-14:00</string>
    <string name="sn_na_hour" translatable="false">-</string>
    <!-- bottom_sheet_middle_box.java-->
    <string name="bsmb_llamar" translatable="true">LLAMAR</string>
    <string name="bsmb_ir" translatable="true">IR</string>
    <string name="bsmb_compartir" translatable="true">COMPARTIR</string>

    <!-- bottom_sheet_upper_box.java-->
    <string name="bsub_subtitle" translatable="true">Farmacia</string>

    <!-- DialogOpeningHoursPharmacy.java-->
    <string name="dialog_title" translatable="true">Horario</string>
    <string name="dialog_mensaje" translatable="true">Horario de apertura</string>
    <string name="dialog_ok_button" translatable="false">ok</string>

    <!-- dialog_opening_hours_24_hours-->
    <string name="doh_24h_open" translatable="true">Abierta 24 horas</string>

    <!-- customview_bottom_navigation.xml-->
    <string name="cbn_alrededor" translatable="true">Cerca</string>
    <string name="cbn_buscar" translatable="true">Buscar</string>
    <string name="cbn_favoritos" translatable="true">Favoritos</string>
    <!-- SeekBarPreference -->
    <string name="sbp_distance"><xliff:g id="distance">%1$1d</xliff:g> Km</string>



    <!-- row_tab_list.xml -->
    <string name="rtl_farmacia_abierta" translatable="true">Abierta</string>
    <string name="rtl_farmacia_cerrada" translatable="true">Cerrada</string>

    <!-- shared intent -->
    <string name="shared_intent_text_farmacia" translatable="true">Farmacia:</string>
    <string name="shared_intent_text_distancia" translatable="true">distancia:</string>
    <string name="shared_intent_text_direccion" translatable="true">dirección:</string>
    <string name="shared_intent_text_tef" translatable="true">tef:</string>


    <!-- SnackBarWrapper.java-->
    <string name="sbw_nuevas_localizaciones" translatable="true">Nueva localizacion detectada</string>
    <string name="sbw_actualizar" translatable="true">ACTUALIZAR</string>

    <!-- SettingsFragment -->
    <string name="borrar_historial_confirmar_accion" translatable="true">Confirmar borrado</string>
    <string name="borrar_historial_mensaje" translatable="true">¿Seguro que quiere borrar el historial de busqueda?</string>
    <string name="borrar_historial_yes_text" translatable="true">si</string>
    <string name="borrar_historial_no_text" translatable="true">cancelar</string>


</resources>
