<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory >
        <Preference
            android:layout="@layout/preference_image"
            >

        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_first_section">
        <com.chernandezgil.farmacias.customwidget.SeekBarPreference
            android:defaultValue="5"
            app:max="50"
            android:title="@string/seek_bar_title"
            android:key="@string/seek_bar_key"
            />
        <Preference

            android:key="@string/pref_delete_history_key"
            android:summary="@string/pref_delete_history_summary"
            android:title="@string/pref_delete_history_title">

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_second_section">
        <Preference

            android:key="@string/pref_rate_key"
            android:summary="@string/rate_app"
            android:title="@string/rate_app_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.chernandezgil.farmacias" />
        </Preference>

        <Preference
            android:icon="@drawable/gmail"
            android:key="@string/pref_email_key"
            android:title="@string/email_title">

        </Preference>

        <Preference
            android:icon="@drawable/share"
            android:key="@string/pref_share_app_key"
            android:title="@string/share_app_title">


        </Preference>
        <Preference
            android:key="@string/pref_version_key"
            android:title="@string/version_title">

        </Preference>
    </PreferenceCategory>

</PreferenceScreen>