<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn_lunes"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:id="@+id/textView1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hola"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn_martes"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hola"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn_miercoles"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hola"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn_jueves"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hola"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn_viernes"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hola"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn_sabado"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hola"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn_domingo"
            android:gravity="right"
            android:paddingRight="5dp"
            android:layout_weight="1"
            android:id="@+id/textView7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hola"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>
</RelativeLayout>